seumich/static/seumich/styles/main.css
/* ... */
.student-detail-main-menu {
  margin-left: -15px;
  margin-right: -15px;
}

@media screen and (max-width: 992px) {
  .student-detail-main-menu {
    position: static;
    left: auto;
    width: auto;
    margin: -20px -15px 0;
  }
}

.student-detail-main-menu-top {
  width: 100%;
  background-color: #3e6c9c;
  padding-left: 20px;
}

@media screen and (max-width: 992px) {
  .student-detail-main-menu-top {
    padding-left: 0;
  }
}

.student-detail-student-id {
  margin-bottom: 0;
  padding-left: 20px;
  font-size: 14px;
  color: white;
  font-weight: 300;
}

.student-detail-student-email {
  margin-bottom: 0;
  padding-left: 20px;
  padding-bottom: 20px;
  text-decoration: underline;
  font-size: 14px;
  color: white;
  font-weight: 300;
}

.student-detail-student-email-link,
.student-detail-student-name-link {
  color: white;
}

.student-detail-student-email-link:hover,
.student-detail-student-name-link:hover {
  color: white;
}

.student-detail-left-menu-course-line p {
  vertical-align: middle;
  line-height: 60px;
  margin-bottom: 0;
  padding-left: 20px;
  font-size: 20px;
  font-weight: bold;
  color: #1c3144;
}

.student-detail-left-menu-courses {
  min-height: 60px;
  border-bottom: 1px solid #cccccc;
}

.student-detail-left-menu-courses:hover {
  cursor: pointer;
  background-color: #e5e5e5;
}

.student-detail-left-menu-courses h3 {
  width: 70%;
  margin-top: 16px;
  margin-bottom: 10px;
  padding-left: 20px;
  display: inline-block;
  word-wrap: break-word;
  font-size: 18px;
  color: #1c3144;
}

.student-detail-summary {
  width: 75%;
  margin-left: 25%;
}

@media screen and (max-width: 992px) {
  .student-detail-summary {
    width: 100%;
    position: relative;
    margin: auto 0;
  }
}

.student-detail-main {
  width: 75%;
}

@media screen and (max-width: 992px) {
  .student-detail-main {
    width: 100%;
    position: relative;
    margin: auto 0;
    padding-left: 0;
  }
}

.student-detail-summary-content {
  margin-left: 10px;
  margin-right: 10px;
}

@media screen and (max-width: 992px) {
  .student-detail-summary-content {
    margin-left: 0;
    margin-right: 0;
  }
}

.student-detail-data-source {
  margin-top: 10px;
}

.student-info {
  background-color: #e5e5e5;
  padding: 0.75em;
  margin-bottom: 80px;
}

.student-info p {
  display: inline;
}

@media screen and (max-width: 992px) {
  .student-info {
    margin-bottom: 10px;
  }
}

.advisor-names {
  margin-right: 0.4em;
}

.panel-default {
  display: none;
}

@media screen and (max-width: 992px) {
  .panel-default {
    display: block;
  }
}

.no-margin {
  margin-left: 0;
  margin-right: 0;
}

.student-detail-class-site-status {
  display: inline-block;
}

.feedback {
  margin: 0.5em;
}

.feedback img {
  width: 25px;
  margin-right: 5px;
  margin-left: 5px;
}

.footer {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
}

.footer .container-fluid {
  color: #cccccc;
  border-top: 1px solid #e5e5e5;
  background-color: #1c3144;
  font-weight: 300;
  color: white;
}

.footer .container-fluid p.main-color-white {
  margin-top: 13px;
}

@media screen and (min-width: 993px) {
  .footer {
    padding-left: 0;
    padding-right: 0;
  }
}

.container-narrow > hr {
  margin: 30px 0;
}

.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;
}

.jumbotron .btn {
  font-size: 21px;
  padding: 14px 24px;
}

@media screen and (min-width: 993px) {
  .jumbotron {
    border-bottom: 0;
  }
}

@media screen and (min-width: 1150px) {
  .nv-axislabel {
    display: none;
  }
}

@media screen and (min-width: 993px) {
  .container {
    max-width: 100% !important;
  }
}

@media screen and (min-width: 993px) {
  .container-feedback {
    width: 50%;
  }
}

@media screen and (min-width: 993px) {
  .student-class-site-list,
  .student-detail-mobile {
    display: none;
  }
}

@media screen and (min-width: 993px) {
  #student-search {
    width: 22em;
  }
}

@media screen and (min-width: 768px) and (max-width: 992px) {
  #student-search {
    width: 22em;
  }
}

@media screen and (max-width: 992px) {
  #student-search:focus, #student-search:hover {
    font-size: 16px !important;
  }
}

@media screen and (max-width: 992px) {
  .open > .dropdown-menu {
    color: #cccccc;
  }
}

@media screen and (max-width: 992px) {
  .student-class-site-table,
  .student-detail-left-menu-detail {
    display: none;
  }
}

.student-detail-left-menu-detail {
  margin-bottom: 100px;
}

@media screen and (max-width: 992px) {
  .table-responsive {
    border: none;
  }
}

@media screen and (max-width: 992px) {
  .student-detail-summary-title {
    padding-left: 0;
  }
}

@media screen and (max-width: 992px) {
  .navbar-fixed-bottom {
    position: relative;
  }
}

@media screen and (max-width: 992px) {
  .mobile-inline {
    margin-bottom: 10px;
    display: inline-block;
  }
}

@media screen and (max-width: 992px) {
  .class-site {
    width: 75%;
  }
}

@media screen and (max-width: 992px) {
  .hide-small-grid {
    display: none;
  }
}

@media screen and (max-width: 992px) {
  .status-icon {
    float: right;
  }
}

@media screen and (max-width: 992px) {
  .panel-heading {
    padding: 15px;
  }
}

@media screen and (max-width: 992px) {
  .assignment-table {
    margin-left: 0;
  }
  .assignment-table > .container-fluid {
    padding: 0;
  }
}

@media screen and (max-width: 992px) {
  .footer-block,
  .mobile-div {
    display: block;
  }
}

@media screen and (max-width: 992px) {
  .navbar-toggle {
    background-color: #f9f9f9;
    display: block;
  }
}

@media screen and (max-width: 992px) {
  .navbar-header {
    float: none;
  }
}

@media screen and (max-width: 992px) {
  .navbar-left,
  .navbar-right {
    float: none !important;
  }
}

@media screen and (max-width: 992px) {
  .navbar-collapse {
    border-top: 1px solid transparent;
    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
  }
  .navbar-collapse.collapse {
    display: none !important;
  }
}
/* ... */

